Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10259

Edit control should stop processing characters when left mouse button is down

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Win32SS
    • None

    Description

      When the left mouse button is held down, the edit control should stop processing characters until the button is released.

      Attachments

        1. edit.patch
          0.8 kB
          KRosUser
        2. edit_v2.patch
          0.8 kB
          KRosUser

        Activity

          People

            katayama_hirofumi_mz Katayama Hirofumi MZ
            mudhead mudhead
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: