[COMCTL32][USER32] EDIT control: Check bCaptureState on WM_CHAR (#6206)

Based on KRosUser's edit_v2.patch.
Edit control should stop processing
characters when left mouse button
is down.
If es->bCaptureState is set, then
ignore WM_CHAR message.
CORE-10259